unified_tests/operators/arithmetic_operand_unknown_name/expect/build.text.stderr
lib.copp:2:12: error: unknown name 'missing'
      return missing - 1
             ^
